unpackaged/main/default/objects/Organization_Relationship__c/fields/First_Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>First_Relationship_Type__c</fullName>
    <description>Use to describe relationship between Org 1 and Org 2.</description>
    <inlineHelpText>Choose a value that describes relationship between Org 1 and Org 2.</inlineHelpText>
    <label>First Relationship Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consortium</fullName>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>Board</fullName>
                <isActive>false</isActive>
                <label>Board</label>
            </value>
            <value>
                <fullName>Business Associate</fullName>
                <isActive>false</isActive>
                <label>Business Associate</label>
            </value>
            <value>
                <fullName>Business Partner</fullName>
                <isActive>false</isActive>
                <label>Business Partner</label>
            </value>
            <value>
                <fullName>Child</fullName>
                <isActive>false</isActive>
                <label>Child</label>
            </value>
            <value>
                <fullName>Club</fullName>
                <isActive>false</isActive>
                <label>Club</label>
            </value>
            <value>
                <fullName>Consultant</fullName>
                <isActive>false</isActive>
                <label>Consultant</label>
            </value>
            <value>
                <fullName>Employer</fullName>
                <isActive>false</isActive>
                <label>Employer</label>
            </value>
            <value>
                <fullName>Funder</fullName>
                <isActive>false</isActive>
                <label>Funder</label>
            </value>
            <value>
                <fullName>Funding Vehicle</fullName>
                <isActive>false</isActive>
                <label>Funding Vehicle</label>
            </value>
            <value>
                <fullName>Investment</fullName>
                <isActive>false</isActive>
                <label>Investment</label>
            </value>
            <value>
                <fullName>Investor</fullName>
                <isActive>false</isActive>
                <label>Investor</label>
            </value>
            <value>
                <fullName>Knows</fullName>
                <isActive>false</isActive>
                <label>Knows</label>
            </value>
            <value>
                <fullName>Neighbor</fullName>
                <isActive>false</isActive>
                <label>Neighbor</label>
            </value>
            <value>
                <fullName>Philanthropic Partner</fullName>
                <isActive>false</isActive>
                <label>Philanthropic Partner</label>
            </value>
            <value>
                <fullName>Representative</fullName>
                <isActive>false</isActive>
                <label>Representative</label>
            </value>
            <value>
                <fullName>Represented institution</fullName>
                <isActive>false</isActive>
                <label>Represented institution</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>