unpackaged/main/default/objects/Organization_Relationship__c/fields/Key_Relationship_For_Second__c.field-meta.xml
<CustomField>
    <fullName>Key_Relationship_For_Second__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Key Relationship For Second</label>
    <type>Checkbox</type>
</CustomField>