unpackaged/main/default/objects/Organization_Relationship__c/fields/Organization_1__c.field-meta.xml
<CustomField>
    <fullName>Organization_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created as a part of heller migration 2021.</description>
    <label>Organization 1</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>ORGANIZATION_RELATIONSHIPS</relationshipName>
    <type>Lookup</type>
</CustomField>