unpackaged/main/default/objects/Organization_Relationship__c/fields/Organization_2__c.field-meta.xml
<CustomField>
    <fullName>Organization_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created as a part of Heller Migration 2021.</description>
    <label>Organization 2</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>ORGANIZATION_RELATIONSHIPS1</relationshipName>
    <type>Lookup</type>
</CustomField>