unpackaged/main/default/objects/Organization_Relationship__c/fields/Political_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Political_Contribution__c</fullName>
    <description>Created as a part of Heller Data Migration 2021.</description>
    <label>Political Contribution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>